# target_table

./: .gitignore  AGENTS.md  README.md  app.py  data.py  details.py  download.py  pyproject.toml  requirements.txt  sheets.json  table.py  target_format.py  translation.json
