[project]
name = "target-table"
version = "0.2.0"
description = "Policy Target Dataset Explorer — Shiny for Python web app to browse Chinese climate policy target data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.35.0",
    "requests>=2.32.3",
    "shiny>=1.5.0",
    "xlsxwriter>=3.2.9",
]
