[project]
name = "target-table"
version = "0.2.1"
description = "Policy Target Dataset Explorer — Shiny for Python web app to browse Chinese climate policy target data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.20.2",
    "httpx>=0.28.1",
    "polars>=1.42.1",
    "requests>=2.34.2",
    "shiny>=1.6.3",
    "xlsxwriter>=3.2.9",
]
